<resources>
    <string name="app_name">Go</string>
    <string name="log_in">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Start</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="product_logo">Product Logo</string>
    <string name="personal_details">Personal Details</string>
    <string name="username_password_ph">Enter Username and Password</string>
    <string name="main_activity_ph">Forex trading shouldn’t be hard. Set your rates create a bid and start trading today.</string>
    <string name="forgot_password">Forgot Pin?</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="choose_country_ph">Choose your country</string>
    <string name="personal_details_ph">What is your name?</string>
    <string name="country_info_ph">What country are you in?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address_ph">What is your email address?</string>
    <string name="create_a_username">Create a username</string>
    <string name="username_text_ph">This will be your trading name within the app, you can always change, it in your profile.</string>
    <string name="create_a_password">Create a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_a_password">Input a password</string>
    <string name="password_helper_ph">Your password should be a minimum of 6 characters</string>
    <string name="nigerian"> Nigerian</string>
    <string name="what_is_your_phone_number">What is your Phone Number?</string>
    <string name="country_information_ph">Your country information helps \n us verify you.</string>
    <string name="phone">Phone</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="otp_ph">Please enter the 5 digit code we just  sent you by text.</string>
    <string name="confirm_number_ph">An OTP is a verification code that helps us confirm your number</string>
    <string name="resend_otp">Resend code in 20s</string>
    <string name="enter_bvn">Enter BVN</string>
    <string name="please_enter_bvn">Please enter your bank verification number</string>
    <string name="bvn">Bank Verification Number</string>
    <string name="what_is_bvn">What is a Bank Verification Number?</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="card">Card</string>
    <string name="card_number">Card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="set_pin">Create a PIN</string>
    <string name="pin_info">To protect your account.</string>
    <string name="account_setup_completed">Account Setup Completed!</string>
    <string name="fund_wallet_text">Fund wallet and start \ntrading in real time</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="skip">Skip</string>
    <string name="backdrop">backdrop</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_name_ph">Eleanor Ezimah</string>
    <string name="home">Home</string>
    <string name="payments">Payments</string>
    <string name="done">Done</string>
    <string name="let_s_get_to_know_you">Let’s get to know you.</string>
    <string name="contact_details">Contact details</string>
    <string name="to_enable_us_verify_your_account">To enable us verify your account</string>
    <string name="to_keep_your_account_secure">To keep your account secure</string>
    <string name="paylite">Paylite</string>
    <string name="available_balance">Available Balance</string>
    <string name="amount_naira">₦0.00</string>
    <string name="amount_naira_20_000">+ ₦20,000.00</string>
    <string name="amount_0">0.00</string>
    <string name="top_up">Top Up</string>
    <string name="view_history">View History</string>
    <string name="see_all">See all</string>
    <string name="section_title_ph">Featured</string>
    <string name="flight_tickets_to_jamaica">Flight tickets to Jamaica</string>
    <string name="deals">Deals</string>
    <string name="offline">No internet connection found</string>
    <string name="retry">Retry</string>
    <string name="easy_as_it_gets">easy as it gets</string>
    <string name="payments_title">PAYMENTS</string>
    <string name="send_money">Send Money</string>
    <string name="qr_payment">QR Payment</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="your_payment_link">Share your payment link with friends, clients or family members to request money from them</string>
    <string name="yinka_oni">Yinka Oni</string>
    <string name="paylite_xyz_yinkaoni">paylite.xyz/yinkaoni</string>
    <string name="share_paylite_link">Share Paylite Link</string>
    <string name="add_amount">Add amount or note</string>
    <string name="airtime_data">Airtime &amp; Data</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="flights">Flights</string>
    <string name="qr_pay">QR Pay</string>
    <string name="quick_actions">Quick actions</string>
    <string name="pay_code">Pay Code</string>
    <string name="you_have_no_scheduled_payments_created">You have no scheduled payments</string>
    <string name="you_have_no_staff">Add a staff to see payment info here</string>
    <string name="create">Create</string>
    <string name="irrigation_2018">Irrigation 2018</string>
    <string name="agriculture">Agriculture</string>
    <string name="reference">Purpose of Payment</string>
    <string name="red_cross_society">Red Cross Society</string>
    <string name="health">Health</string>
    <string name="exit">exit</string>
    <string name="placeholder">
        We are a youth-led Not-for-Profit Organization advocating against sexual violence,
        providing prevention mechanisms and supporting survivors with psychosocial services.
        Read more advocate for rape survivors who can’t speak about their ordeal due to stigmatization,
        by enlighten our community on the need to end rape and victim blaming. We use various platforms
        to educate people and also engage in interactive sessions via social media. We are working towards
        the day when rape is part of history, rather than a part of our everyday lives.
    </string>
    <string name="learn_more_about_h_e_a_r_t">Learn more about H.E.A.R.T</string>
    <string name="sterling_heart_foundation">Sterling Heart Foundation</string>
    <string name="_60_percent">60%</string>
    <string name="_100_donors">100</string>
    <string name="_20_days">20</string>
    <string name="funded">Funded</string>
    <string name="days_left">Days Left</string>
    <string name="donors">Donors</string>
    <string name="orphanage_drive">Orphanage Drive</string>
    <string name="sterling_heart">Sterling HEART</string>
    <string name="project_name_charity">Project Name / Charity</string>
    <string name="amount">Amount</string>
    <string name="schedule">Schedule Payment</string>
    <string name="create_a_standing_order">Create a Standing Order</string>
    <string name="standing_order">Standing Order</string>
    <string name="payment_date">Start date</string>
    <string name="_22_jun_2018">22 Jun, 2018</string>
    <string name="never">Never</string>
    <string name="repeat">Repeat</string>
    <string name="transaction_name">Dekanla Desalu</string>
    <string name="transaction_time">Today, 12:00 AM</string>
    <string name="transaction_amount">₦0.00</string>
    <string name="transaction_amount_2">₦20,000.00</string>
    <string name="naira">₦</string>
    <string name="_continue">Continue</string>
    <string name="confirm_payment">Enter your transaction PIN\nto confirm payment</string>
    <string name="yemi_odubiyi">Yemi Odubiyi</string>
    <string name="test_payment">Test Payment</string>
    <string name="repeat_status">Weekly from 22/06/2018 until 23/06/2018</string>
    <string name="new_to_paylite">New to Paylite</string>
    <string name="already_using_paylite">Already have an account?</string>
    <string name="pay">Pay</string>
    <string name="lite">lite</string>
    <string name="send_money_to_anyone">Send money to anyone with just\n their phone number, email\n or social handle.</string>
    <string name="rt">RT</string>
    <string name="movie_tickets">Movie Tickets</string>
    <string name="profile">Profile</string>
    <string name="olayinka_oni_gmail_com">olayinka.oni@gmail.com</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log Out</string>
    <string name="general">GENERAL</string>
    <string name="passcode">Passcode</string>
    <string name="face_id">Face ID</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="mastercard_2334">Mastercard *0813</string>
    <string name="add_new_payment_method">Add new payment method</string>
    <string name="notifications">Notifications</string>
    <string name="clear">Clear</string>
    <string name="notifications_message_or_something_like_that">Notifications message or something like that</string>
    <string name="_4_days_ago">4 days ago</string>
    <string name="donate_to_support_s_t_e_r">Donate to support S.T.E.R</string>
    <string name="transactions">Transactions</string>
    <string name="total_for_this_month">Total for this month</string>
    <string name="upcoming">Upcoming</string>
    <string name="apr">APR</string>
    <string name="mar">MAR</string>
    <string name="feb">FEB</string>
    <string name="balance_201_00">Balance ₦0.00</string>
    <string name="network_provider">Provider</string>
    <string name="mobile_top_up">Mobile Top-up</string>
    <string name="project">Project</string>
    <string name="mobile_number">Mobile number</string>
    <string name="available_bundles">Available bundles</string>
    <string name="select_a_bundle">Select A Bundle</string>
    <string name="close">Close</string>
    <string name="account_number_email_or_phone">Account number, email or phone</string>
    <string name="recipient_name">Recipient\'s Name</string>
    <string name="employee_name">Employee Name</string>
    <string name="recipient_username">Recipient\'s Username</string>
    <string name="mastercard">Mastercard</string>
    <string name="card_details">Card Details</string>
    <string name="_0000">0000</string>
    <string name="american_express">American Express</string>
    <string name="card_type">Card Type</string>
    <string name="link_card">Link Card</string>
    <string name="add">Add</string>
    <string name="please_input_your_card_number">Please input your card number</string>
    <string name="now_enter_your_cards_expiration_date">Enter your card\'s expiration date.</string>
    <string name="start">Start</string>
    <string name="amount_minimum_amount_of_n100">Amount</string>
    <string name="scheduled_payments">Scheduled Payments</string>
    <string name="_2_standing_orders">2 standing orders</string>
    <string name="paylite_contacts">PAYLITE CONTACTS</string>
    <string name="to_bank">To Bank</string>
    <string name="send_money_to_bank_accounts">Send money to bank accounts</string>
    <string name="to_phone_or_email">To Phone or Email</string>
    <string name="send_money_to_contacts_on_your_phone">Send money to your contacts</string>
    <string name="services">Services</string>
    <string name="gender">Gender</string>
    <string name="frequency">Frequency</string>
    <string name="stop">Stop</string>
</resources>