<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/icon_transactions"
        android:orderInCategory="101"
        android:title="@string/transactions"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/icon_services"
        android:orderInCategory="102"
        android:title="@string/services"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_settings"
        android:orderInCategory="102"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>
